# learning

./: README.md  pyproject.toml  requirements.txt
dj_modul_1/: select_update.py  single_lock.py  task_queue.py  task_rate_limiter.py
modul_1/: dec_lru_cash(19).py  dec_lru_cash_19.py  lru_cash_learn.py  metaclss.py
modul_1/singleton/: main_from_import.py  singleton.py  singleton_module.py
modul_2/: search_element(8).py  search_element_8.py
modul_3/: async_http(8).py  async_http(9).py  create_data.py  task_description.txt  test_output.jsonl  urls.txt
modul_3/data/: results.jsonl
modul_3/solution/: async_http(8).py  async_http(9).py  async_http_8.py  async_http_9.py  async_new.py
modul_4/: function.py  parallel_work_int.py  task_deskription.txt
modul_4/multiprocess(cpu)_vc_other(IO)/: concurrent_futures.py  function.py  main_file.py  multiproc_concurrent_queue.py  queue_multi.py
modul_4/multiprocess_vc_other/: main_file.py  multiproc_concurrent_queue.py  with_chunc.py
modul_4/multiprocess_vc_other/results/: benchmark_results.json  benchmark_timings.csv  results.json  timings.csv
modul_6/: currency_asgi_wsgi.py  currency_server.py  task_description.txt  tkinter_currency.py
results/: benchmark_results.json  benchmark_timings.csv
