[project]
name = "learning"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "aiohappyeyeballs==2.6.1",
    "aiohttp==3.12.15",
    "aiosignal==1.4.0",
    "async-timeout==5.0.1",
    "attrs==25.3.0",
    "colorama==0.4.6",
    "contourpy==1.3.2",
    "cycler==0.12.1",
    "django==4.2",
    "fonttools==4.59.1",
    "frozenlist==1.7.0",
    "idna==3.10",
    "kiwisolver==1.4.9",
    "matplotlib==3.10.5",
    "multidict==6.6.4",
    "numpy==2.2.6",
    "packaging==25.0",
    "pillow==11.3.0",
    "propcache==0.3.2",
    "pyparsing==3.2.3",
    "python-dateutil==2.9.0.post0",
    "redis>=6.4.0",
    "ruff>=0.12.9",
    "six==1.17.0",
    "tqdm==4.67.1",
    "typing-extensions==4.14.1",
    "yarl==1.20.1",
]
[tool.ruff.lint]
extend-select = ["I"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

